traces/bug_24.txt
/home/runner/work/42sh-infer/42sh-infer/src/dualcast.c:25: error: MEMORY_LEAK
  memory dynamically allocated to `return` by call to `get_password()` at line 22, column 17 is not reachable after line 25, column 9.
Showing all 4 steps of the trace


/home/runner/work/42sh-infer/42sh-infer/src/dualcast.c:15:1: start of procedure launch_dc_server()
13.   #include <stdlib.h>
14.   
15. > int launch_dc_server(void)
16.   {
17.       fd_set rdfs;

/home/runner/work/42sh-infer/42sh-infer/src/dualcast.c:22:9: Taking false branch
20.       char *code;
21.   
22.       if ((code = get_password()) == NULL)
              ^
23.           return 1;
24.       if (init_dualcast(&socket) == -1)

/home/runner/work/42sh-infer/42sh-infer/src/dualcast.c:24:9: Taking true branch
22.       if ((code = get_password()) == NULL)
23.           return 1;
24.       if (init_dualcast(&socket) == -1)
              ^
25.           return 1;
26.       putstr("Dualcast ready !\n"

/home/runner/work/42sh-infer/42sh-infer/src/dualcast.c:25:9: 
23.           return 1;
24.       if (init_dualcast(&socket) == -1)
25. >         return 1;
26.       putstr("Dualcast ready !\n"
27.              "Here is the session token: %s\n"
